--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "oidc-client-ts": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -14,6 +15,7 @@
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
+    "sweetalert2": "^11.15.1",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.35"
   },
